<resources>
    <string name="app_name">Inventory App</string>
    <string name="button_sale">Sale</string>

    <string name="empty_view_title_text">No products yet !</string>
    <string name="empty_view_subtitle_text">Add a product by clicking on the \'+\' button</string>

    <string name="category_name">Name</string>
    <string name="category_price">Price</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_mail">Supplier Mail:</string>
    <string name="category_picture">Picture</string>

    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier">Supplier</string>
    <string name="hint_product_supplier_mail">Supplier Mail</string>

    <string name="unit_price_currency">$</string>

    <string name="button_quantity_plus">+</string>
    <string name="button_quantity_minus">-</string>

    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_activity_insert_product_successfull">Successfully inserted new product!</string>
    <string name="editor_activity_insert_product_failed">Failed to insert new product</string>
    <string name="editor_activity_update_product_successfull">Successfully updated product!</string>
    <string name="editor_activity_update_product_failed">Product update failed</string>
    <string name="editor_activity_delete_product_successfull">Successfully deleted product!</string>
    <string name="editor_activity_delete_product_failed">Product delete failed</string>

    <string name="toast_enter_product_name">Please enter a product name</string>
    <string name="toast_enter_product_price">Please enter a product price</string>
    <string name="toast_enter_product_supplier">Please enter a product supplier</string>
    <string name="toast_enter_product_supplier_mail">Please enter a supplier e-mail</string>
    <string name="toast_minimum_quantity_reached">Cannot sell an item with 0 quantity</string>

    <string name="action_reorder">Reorder</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="TAG_KEY_IMAGE_URI">1458</string>

</resources>

